Document using --add-opens flags.
This is necessary to avoid errors like
```
org.robolectric.interceptors.AndroidInterceptors$FileDescriptorInterceptor cannot access class jdk.internal.access.SharedSecrets (in module java.base) because module java.base does not export jdk.internal.access to unnamed module
```